--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "core-js": "^3.6.5",
     "rimraf": "^3.0.2",
     "vue": "^3.0.0",
